refac: delete redundant parameter extractor function.